<resources>
    <string name="app_name">TodayHappy</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="main">首页</string>
    <string name="frag_news_1">新闻</string>
    <string name="frag_joke_2">笑话</string>
    <string name="frag_fun_pic_3">趣图</string>
    <string name="frag_history_4">今日</string>
    <string name="frag_about_5">关于</string>
    <string name="frag_weather_6">天气预报</string>
    <string name="more">更多</string>
    <string name="clean">清理缓存</string>
    <string name="night">夜间模式</string>
    <string name="day">日间模式</string>
    <string name="today_of_history">历史上的今天</string>
    <string-array name="news_type_cn">
        <item>头条</item>
        <item>社会</item>
        <item>国内</item>
        <item>国际</item>
        <item>娱乐</item>
        <item>体育</item>
        <item>军事</item>
        <item>科技</item>
        <item>财经</item>
        <item>时尚</item>
    </string-array>
    <string-array name="news_type_en">
        <item>toutiao</item>
        <item>shehui</item>
        <item>guonei</item>
        <item>guoji</item>
        <item>yule</item>
        <item>tiyu</item>
        <item>junshi</item>
        <item>keji</item>
        <item>caijing</item>
        <item>shishang</item>
    </string-array>
    <string name="title_activity_today_detail">TodayDetailActivity</string>
</resources>
